refactored text container classes to be more generally applicable; fixed footer spacing in both 'home' and 'about' pages to match reference design

--- a/css/index.css
+++ b/css/index.css
@@ -165,6 +165,17 @@ p {
   margin: 0 auto;
   max-width: 800px;
 }
+.text-container,
+.text-container-wide {
+  margin: 2.5% 0;
+  padding: 0 1%;
+}
+.text-container {
+  width: 48%;
+}
+.text-container-wide {
+  width: 96%;
+}
 
 /* Header Section Styles */
 .navigation-header {
@@ -196,16 +207,6 @@ p {
   flex-wrap: wrap;
   justify-content: space-evenly;
   margin-bottom: 20px;
-}
-.top-content .text-container,
-.top-content .text-container-wide {
-  margin: 2.5% 0;
-  padding-bottom: 20px;
-  padding: 0 1%;
-  width: 48%;
-}
-.top-content .text-container-wide {
-  width: 96%;
 }
 .cover-image-container {
   margin: 0;
@@ -278,8 +279,8 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin: 0 2% 4%;
-  padding-bottom: 2%;
+  margin: 1% 2% 6%;
+  padding-bottom: 2.5%;
   width: 46%;
 }
 .container-learn-more h2 {
@@ -290,8 +291,8 @@ p {
 }
 .container-learn-more button {
   background-color: rgba(0, 0, 0, 0);
-  border: solid 2px black;
   border-radius: 8px;
+  border: solid 2px black;
   font-size: 1rem;
   line-height: 1;
   padding: 2.5%;
@@ -307,13 +308,15 @@ p {
 .bottom-content {
   display: flex;
   justify-content: space-around;
-  margin: 0 2% 20px;
-}
-.bottom-content .text-container {
-  padding-right: 4%;
 }
 .bottom-content .text-container:last-child {
   padding-right: 0;
+}
+.bottom-content .text-container {
+  margin: 0 1.5% 2.5%;
+}
+.bottom-content .text-container-wide {
+  margin: 0 1.5% 5%;
 }
 
 /* Footer Section Styles */
